update symbols files

--- a/debian/libnvidia-glvkspirv.symbols.in
+++ b/debian/libnvidia-glvkspirv.symbols.in
@@ -9,3 +9,4 @@ libnvidia-glvkspirv.so.#VERSION# #PACKAGE# #MINVER#
  _nv006nvvm@Base 396
  _nv007nvvm@Base 396
  _nv008nvvm@Base 410
+ _nv009nvvm@Base 430
