--- a/debian/not-installed.in
+++ b/debian/not-installed.in
@@ -13,7 +13,6 @@ nvidia-installer.1
 pkg-history.txt
 
 NVIDIA_Changelog
-nvidia_icd.json.template
 
 nvidia-modprobe
 nvidia-modprobe.1
@@ -34,6 +33,8 @@ nvidia-xconfig.1
 
 libnvidia-egl-wayland.so.1.1.2
 10_nvidia_wayland.json
+
+libEGL.so.#VERSION#
 
 libEGL.so.1.1.0
 libGL.so.1.7.0
