--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -8,3 +8,4 @@ conftest-verbose.patch
 cc_version_check-gcc5.patch
 nvidia-use-ARCH.o_binary.patch
 nvidia-modeset-use-ARCH.o_binary.patch
+conftest-prefer-arch-headers.patch
