--- a/debian/libglvnd0-nvidia.lintian-overrides.in
+++ b/debian/libglvnd0-nvidia.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
+[i386]: binary-file-built-without-LFS-support
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
