--- a/debian/libnvidia-glvkspirv.lintian-overrides.in
+++ b/debian/libnvidia-glvkspirv.lintian-overrides.in
@@ -1,9 +1,10 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
+[i386]: binary-file-built-without-LFS-support
 [i386]: shlib-with-non-pic-code
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
+[ppc64el]: hardening-no-relro
 hardening-no-stackprotector
 
 # The libnvidia-glvkspirv.so.* SONAME changes with every upstream
