--- a/debian/libnvidia-ptxjitcompiler1.lintian-overrides.in
+++ b/debian/libnvidia-ptxjitcompiler1.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-[!amd64]: binary-file-built-without-LFS-support
+[i386]: binary-file-built-without-LFS-support
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
