--- a/debian/xserver-xorg-video-nvidia.lintian-overrides.in
+++ b/debian/xserver-xorg-video-nvidia.lintian-overrides.in
@@ -1,10 +1,10 @@
 # The NVIDIA license does not allow any form of modification.
-[amd64]: spelling-error-in-binary
-[amd64]: hardening-no-bindnow
-[amd64]: hardening-no-fortify-functions
-[amd64]: hardening-no-relro
+[!i386 !armhf]: spelling-error-in-binary
+[!i386 !armhf]: hardening-no-bindnow
+[!i386 !armhf]: hardening-no-fortify-functions
+[!i386 !armhf]: hardening-no-relro
 hardening-no-stackprotector
 
 # On architectures no longer supported by the current driver,
 # this is a dummy package depending on the 390xx legacy driver.
-[!amd64]: transitional-package-should-be-oldlibs-optional
+[i386 armhf]: transitional-package-should-be-oldlibs-optional
