update symbols files

--- a/debian/libnvidia-eglcore.symbols.in
+++ b/debian/libnvidia-eglcore.symbols.in
@@ -30,8 +30,8 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glBeginQueryIndexed@Base 346
  _glBeginTransformFeedback@Base 346
  _glBeginTransformFeedbackNV@Base 346
- _glBeginVideoCaptureNV@Base 346
- _glBindANCCaptureStreamBufferNVX@Base 346
+#MISSING: 440# _glBeginVideoCaptureNV@Base 346
+#MISSING: 440# _glBindANCCaptureStreamBufferNVX@Base 346
  _glBindAttribLocation@Base 346
  _glBindAttribLocationARB@Base 346
  _glBindBuffer@Base 346
@@ -75,8 +75,8 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glBindVertexArrayOES@Base 346
  _glBindVertexBuffer@Base 346
  _glBindVertexBuffers@Base 346
- _glBindVideoCaptureStreamBufferNV@Base 346
- _glBindVideoCaptureStreamTextureNV@Base 346
+#MISSING: 440# _glBindVideoCaptureStreamBufferNV@Base 346
+#MISSING: 440# _glBindVideoCaptureStreamTextureNV@Base 346
  _glBitmap@Base 346
  _glBlendBarrier@Base 358
  _glBlendBarrierKHR@Base 346
@@ -525,7 +525,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glEndQueryIndexed@Base 346
  _glEndTransformFeedback@Base 346
  _glEndTransformFeedbackNV@Base 346
- _glEndVideoCaptureNV@Base 346
+#MISSING: 440# _glEndVideoCaptureNV@Base 346
  _glEvalCoord1d@Base 346
  _glEvalCoord1dv@Base 346
  _glEvalCoord1f@Base 346
@@ -1007,15 +1007,15 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glGetVertexAttribiv@Base 346
  _glGetVertexAttribivARB@Base 346
  _glGetVertexAttribivNV@Base 346
- _glGetVideoCaptureANCStreamivNVX@Base 346
- _glGetVideoCaptureStreamdvNV@Base 346
- _glGetVideoCaptureStreamfvNV@Base 346
- _glGetVideoCaptureStreamivNV@Base 346
- _glGetVideoCaptureivNV@Base 346
- _glGetVideoi64vNV@Base 346
- _glGetVideoivNV@Base 346
- _glGetVideoui64vNV@Base 346
- _glGetVideouivNV@Base 346
+#MISSING: 440# _glGetVideoCaptureANCStreamivNVX@Base 346
+#MISSING: 440# _glGetVideoCaptureStreamdvNV@Base 346
+#MISSING: 440# _glGetVideoCaptureStreamfvNV@Base 346
+#MISSING: 440# _glGetVideoCaptureStreamivNV@Base 346
+#MISSING: 440# _glGetVideoCaptureivNV@Base 346
+#MISSING: 440# _glGetVideoi64vNV@Base 346
+#MISSING: 440# _glGetVideoivNV@Base 346
+#MISSING: 440# _glGetVideoui64vNV@Base 346
+#MISSING: 440# _glGetVideouivNV@Base 346
 #MISSING: 410# _glGetVkCoreProcAddrNVX@Base 381
  _glGetVkProcAddrNV@Base 364
  _glGetnColorTable@Base 346
@@ -1549,8 +1549,8 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glPopDebugGroupOES@Base 346
  _glPopMatrix@Base 346
  _glPopName@Base 346
- _glPresentFrameDualFillNV@Base 346
- _glPresentFrameKeyedNV@Base 346
+#MISSING: 440# _glPresentFrameDualFillNV@Base 346
+#MISSING: 440# _glPresentFrameKeyedNV@Base 346
  _glPrimitiveBoundingBox@Base 358
  _glPrimitiveBoundingBoxARB@Base 358
  _glPrimitiveBoundingBoxEXT@Base 346
@@ -2244,7 +2244,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glUseProgramStages@Base 346
  _glUseProgramStagesEXT@Base 346
  _glUseShaderProgramEXT@Base 346
- _glValidBackBufferHintAutodesk@Base 346
+#MISSING: 440# _glValidBackBufferHintAutodesk@Base 346
  _glValidateProgram@Base 346
  _glValidateProgramARB@Base 346
  _glValidateProgramPipeline@Base 346
@@ -2539,10 +2539,10 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glVertexP4uiv@Base 346
  _glVertexPointer@Base 346
  _glVertexPointerEXT@Base 346
- _glVideoCaptureNV@Base 346
- _glVideoCaptureStreamParameterdvNV@Base 346
- _glVideoCaptureStreamParameterfvNV@Base 346
- _glVideoCaptureStreamParameterivNV@Base 346
+#MISSING: 440# _glVideoCaptureNV@Base 346
+#MISSING: 440# _glVideoCaptureStreamParameterdvNV@Base 346
+#MISSING: 440# _glVideoCaptureStreamParameterfvNV@Base 346
+#MISSING: 440# _glVideoCaptureStreamParameterivNV@Base 346
  _glViewport@Base 346
  _glViewportArrayv@Base 346
  _glViewportArrayvNV@Base 346
@@ -2562,7 +2562,7 @@ libnvidia-eglcore.so.#VERSION# #PACKAGE# #MINVER#
  _glWaitVkSemaphoreNV@Base 364
  _glWeightPathsNV@Base 346
  _glWeightPointerOES@Base 349
- _glWindowBackBufferHintAutodesk@Base 346
+#MISSING: 440# _glWindowBackBufferHintAutodesk@Base 346
  _glWindowPos2d@Base 346
  _glWindowPos2dARB@Base 346
  _glWindowPos2dv@Base 346
