--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -7,5 +7,8 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
+# Use wildcard instead of exact path substitution, this is a M-A: same package.
+embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
+
 # Lintian and debhelper disagree w.r.t. a library in a private directory.
 package-has-unnecessary-activation-of-ldconfig-trigger
