--- a/debian/libnvidia-glvkspirv.lintian-overrides.in
+++ b/debian/libnvidia-glvkspirv.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [i386]: binary-file-built-without-LFS-support
-[i386]: shlib-with-non-pic-code
+shlib-calls-exit
 spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
