document preparations for packaging Tesla driver releases

--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,7 @@ include /usr/share/dpkg/architecture.mk
 include /usr/share/dpkg/pkg-info.mk
 
 include debian/rules.defs
+NVIDIA_TESLA		?=
 NVIDIA_LEGACY		?=
 WATCH_VERSION		?= $(NVIDIA_LEGACY)
 WATCH_PATTERN		?=
