--- a/debian/control.in
+++ b/debian/control.in
@@ -513,6 +513,25 @@ Description: Vendor neutral GL dispatch library -- libEGL
  This package contains the (binary) GLVND libEGL.so.1 stub library provided by
  NVIDIA which dispatches to vendor implementations (libEGL_*.so.0) via GLVND.
 
+Package: libegl1-${nvidia}
+Architecture: amd64 ${arch:ppc64el}
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${nvidia}-alternative (= ${binary:Version}),
+ libegl-${nvidia}0 (= ${binary:Version}),
+ ${shlibs:Depends}, ${misc:Depends}
+Conflicts:
+ ${nvidia}-driver-libs,
+ libgl1-${nvidia}-glvnd-glx,
+Description: NVIDIA binary EGL library (non-GLVND variant)${nvidia:LegacyDesc}
+ EGL provides a platform-agnostic mechanism for creating rendering surfaces
+ for use with other graphics libraries, such as OpenGL|ES.
+ .
+ This package contains the driver specific binary EGL implementation by NVIDIA
+ as a non-GLVND alternative.
+
 Package: libegl-${nvidia}0
 Architecture: i386 amd64 ${arch:ppc64el}
 Multi-Arch: same
