--- a/debian/libnvidia-glvkspirv.symbols.in
+++ b/debian/libnvidia-glvkspirv.symbols.in
@@ -12,3 +12,4 @@ libnvidia-glvkspirv.so.#VERSION# #PACKAGE# #MINVER#
  _nv009nvvm@Base 430
  _nv010nvvm@Base 440
  _nv011nvvm@Base 440
+ _nv012nvvm@Base 440.36
