--- a/debian/control
+++ b/debian/control
@@ -817,6 +817,8 @@ Provides:
  libcuda-10.0-1-i386 [i386],
  libcuda-10.1-1,
  libcuda-10.1-1-i386 [i386],
+ libcuda-10.2-1,
+ libcuda-10.2-1-i386 [i386],
 Homepage: https://www.nvidia.com/CUDA
 Description: NVIDIA CUDA Driver Library${nvidia:LegacyDesc}
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
