--- a/debian/control
+++ b/debian/control
@@ -531,7 +531,7 @@ Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Breaks:
- ${nvidia}-smi (<< ${nvidia:Version}),
+ nvidia-smi (<< 302.17-3),
 Homepage: https://developer.nvidia.com/nvidia-management-library-NVML
 Description: NVIDIA Management Library (NVML) runtime library${nvidia:LegacyDesc}
  The NVIDIA Management Library (NVML) provides a monitoring and management API.
