--- a/debian/control
+++ b/debian/control
@@ -532,6 +532,8 @@ Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Breaks:
  nvidia-smi (<< 302.17-3),
+Provides:
+ libnvidia-ml.so.1 (= ${nvidia:Version}),
 Homepage: https://developer.nvidia.com/nvidia-management-library-NVML
 Description: NVIDIA Management Library (NVML) runtime library${nvidia:LegacyDesc}
  The NVIDIA Management Library (NVML) provides a monitoring and management API.
