--- a/debian/nvidia-detect.install.in
+++ b/debian/nvidia-detect.install.in
@@ -1,4 +1,4 @@
 debian/detect/nvidia-detect	usr/bin/
 debian/detect/nvidia-legacy-*.ids		usr/share/nvidia/
-#debian/detect/nvidia-???.ids			usr/share/nvidia/
+debian/detect/nvidia-???.ids			usr/share/nvidia/
 nvidia.ids			usr/share/nvidia/
