--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -78,6 +78,11 @@ then
 	VERSIONS[418]=418.74
 fi
 
+if grep -q -i $NVGA $IDLISTDIR/nvidia-tesla-418.ids 2>/dev/null
+then
+	VERSIONS[419]=418.87.01
+fi
+
 if grep -q -i $NVGA $IDLISTDIR/nvidia.ids 2>/dev/null
 then
 	# 999 means current
@@ -188,6 +193,10 @@ fi
 		elif [[ -n ${VERSIONS[340]} ]]; then
 			echo "Your card is only supported up to the 340 legacy drivers series."
 			PACKAGE="nvidia-legacy-340xx-driver"
+		elif [[ -n ${VERSIONS[419]} ]]; then
+			echo "Your card is supported by the Tesla drivers series in buster-backports."
+			echo "See https://backports.debian.org for instructions how to use backports."
+			PACKAGE="nvidia-tesla-driver/buster-backports"
 		elif [[ -n ${VERSIONS[304]} ]]; then
 			echo "Your card is only supported by the 304 legacy drivers series, which is only available up to stretch."
 		elif [[ -n ${VERSIONS[173]} ]]; then
@@ -222,6 +231,9 @@ fi
 		elif [[ -n ${VERSIONS[340]} ]]; then
 			echo "Your card is only supported up to the 340 legacy drivers series."
 			PACKAGE="nvidia-legacy-340xx-driver"
+		elif [[ -n ${VERSIONS[419]} ]]; then
+			echo "Your card is supported by the Tesla drivers series."
+			PACKAGE="nvidia-tesla-driver"
 		elif [[ -n ${VERSIONS[304]} ]]; then
 			echo "Your card is only supported by the 304 legacy drivers series, which is only available up to stretch."
 		elif [[ -n ${VERSIONS[173]} ]]; then
@@ -232,6 +244,9 @@ fi
 			echo "Uh oh. Your card is only supported by the 71.86 legacy drivers series, which is not in any current Debian suite."
 		else
 			echo "Oops. Internal error 11 ($NVGA)"
+		fi
+		if [ -n "$PACKAGE" ] && [ "$PACKAGE" != "nvidia-tesla-driver" ] && [[ -n ${VERSIONS[419]} ]]; then
+			echo "Your card is also supported by the Tesla drivers series."
 		fi
 	else
 		echo "Uh oh. Failed to identify your Debian suite.";
