--- a/debian/rules
+++ b/debian/rules
@@ -503,12 +503,12 @@ get-orig-source-files/empty: get-orig-source-prepare/empty $(foreach a,$(DRIVER_
 get-orig-source: get-orig-source-pack/empty
 	$(RM) -r get-orig-source
 
-ifneq (,$(NVIDIA_LEGACY))
+ifneq (,$(or $(NVIDIA_LEGACY),$(NVIDIA_TESLA)))
 get-orig-source-link/%:
 	ln -sf $(subst $(legacy),,$(call get_tarball,$*)) $(call get_tarball,$*)
 
 .PHONY: get-orig-links
-get-orig-links: get-orig-source-link/empty $(foreach a,$(ARCH_LIST),get-orig-source-link/$a)
+get-orig-links: get-orig-source-link/empty $(foreach a,$(DRIVER_ARCH_LIST),get-orig-source-link/$a)
 endif
 
 ############################################################################
@@ -561,7 +561,7 @@ check-current-tarballs: $(TARBALL_TREE)/$(UPSTREAM_VERSION)
 	$(foreach t,$(TARBALL_LIST),$(call test-file-exists,$(TARBALL_TREE)/$(UPSTREAM_VERSION)/$t))
 
 # only invoked manually
-ifeq (,$(NVIDIA_LEGACY))
+ifeq (,$(or $(NVIDIA_LEGACY),$(NVIDIA_TESLA)))
 commit-current-tarballs: MSG = add $(UPSTREAM_VERSION) tarballs
 commit-current-tarballs: get-orig-source
 else
